--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button> -->
+                </button>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <a class="navbar-brand" href="#">Logo</a>
