--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <header><h1>TV guiden</h1></header>
 <section id="topnavbar">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -27,11 +28,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">SalamiDuellen</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
+                    <li class="active" id="liactive"><a href="#">Home</a></li>
                     <li><a href="#">Tjo</a></li>
                     <li><a href="#">Hej</a></li>
                     <li>
