--- a/contact.html
+++ b/contact.html
@@ -19,32 +19,34 @@
 
 <body>
 
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <a class="navbar-brand" href="#">Logo</a>
-                <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Tjo</a></li>
-                    <li><a href="#">Hej</a></li>
-                    <li>
-                        <form><input type="text" name="search" placeholder="Sök...">
-                            <button type="submit">Sök</button>
-                        </form>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
-                </ul>
-            </div>
+    <div class="container-fluid">
+        <div class="row">
+            <nav class="navbar navbar-inverse">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <a class="navbar-brand" href="#">Logo</a>
+                    <ul class="nav navbar-nav">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Tjo</a></li>
+                        <li><a href="#">Hej</a></li>
+                        <li>
+                            <form><input type="text" name="search" placeholder="Sök...">
+                                <button type="submit">Sök</button>
+                            </form>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
+                    </ul>
+                </div>
         </div>
+    </div>
     </nav>
     <section>
         <div class="form-group">
