--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,9 @@
 </head>
 
 <body>
-
+    <header>
+        <h1>TV guiden</h1>
+    </header>
     <div class="container-fluid">
         <div class="row">
             <nav class="navbar navbar-inverse">
