--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,12 @@
                     </button>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
-                    <a class="navbar-brand" href="#">Logo</a>
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
+                        <li class="active" id="liactive"><a href="#">Home</a></li>
                         <li><a href="#">Tjo</a></li>
                         <li><a href="#">Hej</a></li>
                         <li>
-                            <form><input type="text" name="search" placeholder="Sök...">
+                            <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
                                 <button type="submit">Sök</button>
                             </form>
                         </li>
@@ -47,9 +46,10 @@
                         <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
                     </ul>
                 </div>
+            </nav>
         </div>
     </div>
-    </nav>
+
     <section>
         <div class="form-group">
             <label for="usr">Name:</label>
