--- a/programpage.html
+++ b/programpage.html
@@ -30,7 +30,6 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Logo</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
@@ -38,7 +37,7 @@
                         <li><a href="#">Tjo</a></li>
                         <li><a href="#">Hej</a></li>
                         <li>
-                            <form><input type="text" name="search" placeholder="Sök...">
+                            <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
                                 <button type="submit">Sök</button>
                             </form>
                         </li>
@@ -47,10 +46,31 @@
                         <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
                     </ul>
                 </div>
+            </nav>
         </div>
     </div>
-    </nav>
+    <section>
+        <h1 id="headerprogrampage">Kanal 1</h1>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Integer vehicula sollicitudin augue id tincidunt. Suspendisse ornare congue pharetra.
+                        Sed non nisl mauris. Vivamus vitae massa justo. Proin diam ante, dictum at fringilla vitae,
+                        rutrum
+                        quis massa.
+                        Sed eget rhoncus leo. Sed magna nibh, tempor nec facilisis sed, cursus sit amet justo.
+                        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                        Vivamus vehicula suscipit augue ut aliquam. Sed interdum eget ex vel pulvinar.
+                        Phasellus aliquam auctor nisi, quis varius lacus feugiat eget. Suspendisse potenti.
 
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <footer class="container-fluid text-center">
         <a href="aboutus.html"> Om oss </a><br />
