--- a/admin.html
+++ b/admin.html
@@ -30,15 +30,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Logo</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
+                        <li class="active" id="liactive"><a href="#">Home</a></li>
                         <li><a href="#">Tjo</a></li>
                         <li><a href="#">Hej</a></li>
                         <li>
-                            <form><input type="text" name="search" placeholder="Sök...">
+                            <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
                                 <button type="submit">Sök</button>
                             </form>
                         </li>
@@ -47,10 +46,9 @@
                         <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
                     </ul>
                 </div>
+            </nav>
         </div>
     </div>
-    </nav>
-
 
 
     <footer class="container-fluid text-center">
