--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <title>SalamiHjältarna</title>
-    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -37,7 +38,7 @@
                             <li><a href="#">Tjo</a></li>
                             <li><a href="#">Hej</a></li>
                             <li>
-                                <form><input type="text" name="search" placeholder="Sök...">
+                                <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
                                     <button type="submit">Sök</button>
                                 </form>
                             </li>
@@ -46,45 +47,43 @@
                             <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
                         </ul>
                     </div>
+                </nav>
         </div>
     </div>
-    </nav>
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-        </ol>
+    <div class="container">
+        <div class="row">
+            <div class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                </ol>
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
-                <div class="carousel-caption">
-                    <h3>Sell $</h3>
-                    <p>Money Money.</p>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
+                    </div>
+
+                    <div class="item">
+                        <img src="https://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
                 </div>
-            </div>
 
-            <div class="item">
-                <img src="https://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
-                <div class="carousel-caption">
-                    <h3>More Sell $</h3>
-                    <p>Lorem ipsum...</p>
-                </div>
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
-
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
 
     <div class="container text-center">
@@ -92,7 +91,7 @@
         <div class="row">
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <p>Kanal 1</p>
+                <p><a href="programpage.html">Kanal 1</a></p>
                 <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="1">
             </div>
 
@@ -124,6 +123,7 @@
         </div>
     </div><br>
 
+    <div class="container-fluid">
     <div class="row">
 
         <div class="col-sm-6">
