--- a/aboutus.html
+++ b/aboutus.html
@@ -33,8 +33,8 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li class="active" id="liactive"><a href="#">Home</a></li>
-                        <li><a href="#">Tjo</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="#">Tjo</a></li>
                         <li><a href="#">Hej</a></li>
                         <li>
                             <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
