--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li class="active" id="liactive"><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#">Tjo</a></li>
                         <li><a href="#">Hej</a></li>
                         <li>
