--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <div class="container text-center">
-        <h3>What We Do</h3><br>
+        <h3>Rubrik</h3><br>
         <div class="row">
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
