--- a/index.html
+++ b/index.html
@@ -24,36 +24,36 @@
     </header>
     <div class="container-fluid">
         <div class="row">
-                <nav class="navbar navbar-inverse">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <div class="collapse navbar-collapse" id="myNavbar">
-                        <ul class="nav navbar-nav">
-                            <li class="active" id="liactive"><a href="#">Home</a></li>
-                            <li><a href="#">Tjo</a></li>
-                            <li><a href="#">Hej</a></li>
-                            <li>
-                                <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
-                                    <button type="submit">Sök</button>
-                                </form>
-                            </li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
-                        </ul>
-                    </div>
-                </nav>
+            <nav class="navbar navbar-inverse">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="active" id="liactive"><a href="#">Home</a></li>
+                        <li><a href="#">Tjo</a></li>
+                        <li><a href="#">Hej</a></li>
+                        <li>
+                            <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
+                                <button type="submit">Sök</button>
+                            </form>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </div>
 
     <div class="container">
         <div class="row">
-            <div class="carousel slide" data-ride="carousel">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -124,21 +124,21 @@
     </div><br>
 
     <div class="container-fluid">
-    <div class="row">
+        <div class="row">
 
-        <div class="col-sm-6">
-            <div class="well">
-                <p>Some text..</p>
+            <div class="col-sm-6">
+                <div class="well">
+                    <p>Some text..</p>
+                </div>
             </div>
-        </div>
 
-        <div class="col-sm-6">
-            <div class="well">
-                <p>Some text..</p>
+            <div class="col-sm-6">
+                <div class="well">
+                    <p>Some text..</p>
+                </div>
             </div>
-        </div>
 
-    </div>
+        </div>
 
     </div><br>
 
