lagt till bilder på sidorna

--- a/programpage.html
+++ b/programpage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -34,8 +34,8 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Tjo</a></li>
-                        <li><a href="#">Hej</a></li>
+                        <li><a href="#">item</a></li>
+                        <li><a href="#">item</a></li>
                         <li>
                             <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
                                 <button type="submit">Sök</button>
@@ -50,9 +50,9 @@
         </div>
     </div>
     <section>
-        <h1 id="headerprogrampage">Kanal 1</h1>
         <div class="container-fluid">
             <div class="row">
+                <h1 id="headerprogramlogo"><img src="Images/svt1.png" alt="svt1 logo"></h1>
                 <div class="col-xs-12">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
