--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -33,9 +33,9 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="#">Tjo</a></li>
-                        <li><a href="#">Hej</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">item</a></li>
+                        <li><a href="#">item</a></li>
                         <li>
                             <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
                                 <button type="submit">Sök</button>
@@ -50,10 +50,19 @@
         </div>
     </div>
 
-    <section>
-        <h1 id="headaboutus">Om oss</h1>
-        <div>
+    <section class="container">
+        <div class="row">
+            <h1 id="headaboutus">Om oss</h1>
             <p>Här kommer det stå massa intressanta saker om bara en liten stund! </p>
+            <div class="col-xs-12 col-sm-6">
+                <img src="Images/markupProfile.png" style="width:25%" alt="picture on person">
+                <p class="coworkerinfo">Giza Admell</p>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <img src="Images/markupProfile.png" style="width:25%" alt="picture on person">
+                <p class="coworkerinfo">Annica Alienus</p>
+            </div>
+        </div>
         </div>
     </section>
 
