--- a/mypage.html
+++ b/mypage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -34,8 +34,8 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Tjo</a></li>
-                        <li><a href="#">Hej</a></li>
+                        <li><a href="#">item</a></li>
+                        <li><a href="#">item</a></li>
                         <li>
                             <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
                                 <button type="submit">Sök</button>
@@ -49,6 +49,23 @@
             </nav>
         </div>
     </div>
+    <section class="container">
+        <div class="row">
+
+            <div class="col-xs-12 col-sm-6 ">
+                <h1 id="headerprogramlogo"><img src="Images/svt1.png" alt="kanal logo"></h1>
+                <p>
+                    Programinformation
+                </p>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <h1 id="headerprogramlogo"><img src="Images/svt2.png" alt="kanal logo"></h1>
+                <p>
+                    Programinformation
+                </p>
+            </div>
+        </div>
+    </section>
 
     <footer class="container-fluid text-center">
         <a href="aboutus.html"> Om oss </a><br />
