Lagt till svt1 logo

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
                 <p><a href="programpage.html">Kanal 1</a></p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="1">
+                <img id="tvchannellogo" src="Images/svt1.png" class="img-responsive" alt="SVT1">
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
