--- a/index.html
+++ b/index.html
@@ -24,30 +24,30 @@
     </header>
     <div class="container-fluid">
         <div class="row">
-                <nav class="navbar navbar-inverse">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <div class="collapse navbar-collapse" id="myNavbar">
-                        <ul class="nav navbar-nav">
-                            <li class="active" id="liactive"><a href="#">Home</a></li>
-                            <li><a href="#">Tjo</a></li>
-                            <li><a href="#">Hej</a></li>
-                            <li>
-                                <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
-                                    <button type="submit">Sök</button>
-                                </form>
-                            </li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
-                        </ul>
-                    </div>
-                </nav>
+            <nav class="navbar navbar-inverse">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="active" id="liactive"><a href="#">Home</a></li>
+                        <li><a href="#">Tjo</a></li>
+                        <li><a href="#">Hej</a></li>
+                        <li>
+                            <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
+                                <button type="submit">Sök</button>
+                            </form>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </div>
 
@@ -87,58 +87,45 @@
     </div>
 
     <div class="container text-center">
-        <h3>Rubrik</h3><br>
-        <div class="row">
+        <div class="tvchannellogo">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <a href="programpage.html">
+                        <img src="Images/svt1.png" class="img-responsive" alt="SVT1">
+                    </a>
+                </div>
 
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <p><a href="programpage.html">Kanal 1</a></p>
-                <img id="tvchannellogo" src="Images/svt1.png" class="img-responsive" alt="SVT1">
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <img src="Images/svt2.png" class="img-responsive" alt="SVT2">
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <img src="Images/tv3.jpg" class="img-responsive" alt="tv3">
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <img src="Images/kanal4.png" class="img-responsive" alt="kanal4">
+                </div>
             </div>
-
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <p>Kanal 2</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="2">
-            </div>
-
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <p>Kanal 3</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="2">
-            </div>
-
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <p>Kanal 4</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="2">
-            </div>
-
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <p>Kanal 5</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="2">
-            </div>
-
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <p>Kanal 6</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="2">
-            </div>
-
         </div>
     </div><br>
 
     <div class="container-fluid">
-    <div class="row">
+        <div class="row">
 
-        <div class="col-sm-6">
-            <div class="well">
-                <p>Some text..</p>
+            <div class="col-sm-6">
+                <div class="well">
+                    <p>Some text..</p>
+                </div>
             </div>
-        </div>
 
-        <div class="col-sm-6">
-            <div class="well">
-                <p>Some text..</p>
+            <div class="col-sm-6">
+                <div class="well">
+                    <p>Some text..</p>
+                </div>
             </div>
-        </div>
 
-    </div>
+        </div>
 
     </div><br>
 
