--- a/aboutus.html
+++ b/aboutus.html
@@ -52,16 +52,18 @@
 
     <section class="container">
         <div class="row">
+            <div class="coworkerinfo">
             <h1 id="headaboutus">Om oss</h1>
+            <div class="col-xs-12 col-sm-6">
+                <img src="Images/markupProfile.png" class="img-responsive" alt="picture on person">
+                <p>Giza Admell</p>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <img src="Images/markupProfile.png" class="img-responsive" alt="picture on person">
+                <p>Annica Alienus</p>
+            </div>
             <p>Här kommer det stå massa intressanta saker om bara en liten stund! </p>
-            <div class="col-xs-12 col-sm-6">
-                <img src="Images/markupProfile.png" style="width:25%" alt="picture on person">
-                <p class="coworkerinfo">Giza Admell</p>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <img src="Images/markupProfile.png" style="width:25%" alt="picture on person">
-                <p class="coworkerinfo">Annica Alienus</p>
-            </div>
+        </div>
         </div>
         </div>
     </section>
