--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                         <li class="active" id="liactive"><a href="#">Home</a></li>
-                        <li><a href="#">Tjo</a></li>
-                        <li><a href="#">Hej</a></li>
+                        <li><a href="aboutus.html">Om oss</a></li>
+                        <li><a href="contact.html">Kontakta oss</a></li>
                         <li>
                             <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
                                 <button type="submit">Sök</button>
