--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">item</a></li>
-                        <li><a href="#">item</a></li>
+                        <li><a href="aboutus.html">Om oss</a></li>
+                        <li><a id="liactive" class="active" href="contact.html">Kontakta oss</a></li>
                         <li>
                             <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
                                 <button type="submit">Sök</button>
