--- a/aboutus.html
+++ b/aboutus.html
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a class="active" id="liactive"  href="#">Om oss</a></li>
+                        <li class="active"><a href="#">Om oss</a></li>
                         <li><a href="contact.html">Kontakta oss</a></li>
                         <li>
                             <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
@@ -53,17 +53,17 @@
     <section class="container">
         <div class="row">
             <div class="coworkerinfo">
-            <h1 id="headaboutus">Om oss</h1>
-            <div class="col-xs-12 col-sm-6">
-                <img src="Images/markupProfile.png" class="img-responsive" alt="picture on person">
-                <p>Giza Admell</p>
+                <h1 id="headaboutus">Om oss</h1>
+                <div class="col-xs-12 col-sm-6">
+                    <img src="Images/markupProfile.png" class="img-responsive" alt="picture on person">
+                    <p>Giza Admell</p>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <img src="Images/markupProfile.png" class="img-responsive" alt="picture on person">
+                    <p>Annica Alienus</p>
+                </div>
+                <p>Här kommer det stå massa intressanta saker om bara en liten stund! </p>
             </div>
-            <div class="col-xs-12 col-sm-6">
-                <img src="Images/markupProfile.png" class="img-responsive" alt="picture on person">
-                <p>Annica Alienus</p>
-            </div>
-            <p>Här kommer det stå massa intressanta saker om bara en liten stund! </p>
-        </div>
         </div>
         </div>
     </section>
