lagt in home och logga in icon

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 
     <!-- jQuery library -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -33,7 +34,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html"><i class="fas fa-home fa-lg"></i></a></li>
                         <li><a href="aboutus.html">Om oss</a></li>
                         <li class="active"><a href="contact.html">Kontakta oss</a></li>
                         <li>
@@ -43,7 +44,7 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
+                        <li><a href="mypage.html"><i class="fas fa-sign-in-alt fa-lg"></i></a></li>
                     </ul>
                 </div>
             </nav>
