--- a/aboutus.html
+++ b/aboutus.html
@@ -8,6 +8,8 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -33,7 +35,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html"><i class="fas fa-home fa-lg"></i></a></li>
                         <li class="active"><a href="#">Om oss</a></li>
                         <li><a href="contact.html">Kontakta oss</a></li>
                         <li>
@@ -43,7 +45,7 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="mypage.html"><span class="glyphicon glyphicon-log-in"></span> Min sida</a></li>
+                        <li><a href="mypage.html"><i class="fas fa-sign-in-alt fa-lg"></i></a></li>
                     </ul>
                 </div>
             </nav>
