--- a/aboutus.html
+++ b/aboutus.html
@@ -21,8 +21,8 @@
 
 <body>
     <header>
-        <h1>TV guiden</h1>
-    </header>
+            <h1>Seesharps TV</h1>
+        </header>
     <div class="container-fluid">
         <div class="row">
             <nav class="navbar navbar-inverse">
