--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
 
 <body>
     <header>
-        <h1>TV guiden</h1>
-    </header>
+            <h1>Seesharps TV</h1>
+        </header>
     <div class="container-fluid">
         <div class="row">
             <nav class="navbar navbar-inverse">
