--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <title>SalamiHjältarna</title>
+    <title>Seesharps TV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <!-- Latest compiled and minified CSS -->
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <h1>TV guiden</h1>
+        <h1>Seesharps TV</h1>
     </header>
     <div class="container-fluid">
         <div class="row">
