Ändrat typo i kontaktformuläret

--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,9 @@
 
     <section>
         <div class="form-group">
-            <label for="usr">Name:</label>
+            <label for="usr">Namn:</label>
             <input type="text" class="form-control" id="usr">
-            <label for="email">e-mail:</label>
+            <label for="email">E-mail:</label>
             <input type="email" class="form-control" id="email">
             <label for="comment">Meddelande:</label>
             <textarea class="form-control" rows="5" id="comment"></textarea>
