flyttat ett komma

--- a/contact.html
+++ b/contact.html
@@ -10,18 +10,21 @@
 
     <!-- jQuery library -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+        crossorigin="anonymous">
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
+
     <link rel="stylesheet" href="styles.css" />
 
 </head>
 
 <body>
     <header>
-            <h1>Seesharps TV</h1>
-        </header>
+        <h1>Seesharps TV</h1>
+    </header>
     <div class="container-fluid">
         <div class="row">
             <nav class="navbar navbar-inverse">
@@ -59,6 +62,7 @@
             <input type="email" class="form-control" id="email">
             <label for="comment">Meddelande:</label>
             <textarea class="form-control" rows="5" id="comment"></textarea>
+            <input type="submit" value="Submit">
 
     </section>
 
